apps/infra/traefik/default-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: default-middlware-traefik
  namespace: traefik
spec:
  headers:
    contentTypeNosniff: true
    frameDeny: true
    referrerPolicy: "same-origin"

    forceSTSHeader: true
    stsSeconds: 63072000
    stsIncludeSubdomains: true
    stsPreload: true

    customRequestHeaders:
      X-Forwarded-Proto: "https"

    customResponseHeaders:
      X-Robots-Tag: "none,noarchive,nosnippet,notranslate,noimageindex"
      server: ""
