apps/infra/traefik/network-policy.yaml
# Ingress policy for the Traefik pods.
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traefik
  namespace: traefik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
  ingress:
    - fromEntities:
        - cluster
        - world
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
            - port: "8080"
              protocol: TCP
            - port: "9100"
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            app: traefik-tailscale
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
  egress:
    - toEntities:
        - all
